--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "@chakra-ui/react": "^1.6.4",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "axios": "^0.21.1",
     "focus-visible": "^5.2.0",
     "framer-motion": "^4",
     "next": "11.0.1",
+    "nextjs-redirect": "^5.0.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "zustand": "^3.5.5"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/react": "17.0.13",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
