--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nextjs-redirect": "^5.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
     "zustand": "^3.5.5"
   },
   "devDependencies": {
