--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^1.6.4",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@types/react-table": "^7.7.2",
     "axios": "^0.21.1",
     "focus-visible": "^5.2.0",
     "framer-motion": "^4",
@@ -20,6 +21,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-table": "^7.7.0",
     "zustand": "^3.5.5"
   },
   "devDependencies": {
